[gd_scene load_steps=5 format=3 uid="uid://ckvl414wu4om5"]

[ext_resource type="Script" path="res://lib/scenes/select_quantity_dialog.gd" id="1_44m4o"]
[ext_resource type="FontFile" uid="uid://cave61j52xeuh" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="2_v65ks"]
[ext_resource type="Script" path="res://addons/fontawesome/FontAwesomeButton.gd" id="4_yosnh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6d550"]
content_margin_left = 8.0
content_margin_top = 6.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.247059, 0.431373, 0.572549, 0.768627)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.454902, 0.454902, 0.454902, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SelectQuantityDialog" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -66.0
offset_right = 197.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_44m4o")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Body" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="Content/Body"]
layout_mode = 2

[node name="LabelName" type="Label" parent="Content/Body/Top"]
layout_mode = 2
size_flags_horizontal = 3
text = "XXX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonCancel" type="Button" parent="Content/Body/Top"]
layout_mode = 2
localize_numeral_system = false
tooltip_text = "Cancel"
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../SliderQuantity")
focus_next = NodePath("../../Buttons/ButtonDrop")
focus_previous = NodePath("../../SliderQuantity")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_v65ks")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_6d550")
text = "ÔÄç"
script = ExtResource("4_yosnh")
icon_size = 32
icon_name = "xmark"

[node name="Label" type="Label" parent="Content/Body"]
layout_mode = 2
text = "How many ?"

[node name="SliderQuantity" type="HSlider" parent="Content/Body"]
layout_mode = 2
focus_neighbor_top = NodePath("../Top/ButtonCancel")
focus_neighbor_bottom = NodePath("../Buttons/ButtonDrop")
focus_next = NodePath("../Buttons/ButtonDrop")
focus_previous = NodePath("../Top/ButtonCancel")
min_value = 1.0
value = 1.0

[node name="LabelQuantity" type="Label" parent="Content/Body"]
layout_mode = 2
text = "XXX"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Content/Body"]
layout_mode = 2
alignment = 1

[node name="ButtonDrop" type="Button" parent="Content/Body/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Apply"
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../SliderQuantity")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../Top/ButtonCancel")
focus_previous = NodePath("../../SliderQuantity")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
text = "XXX"

[connection signal="pressed" from="Content/Body/Top/ButtonCancel" to="." method="_on_button_cancel_pressed"]
[connection signal="value_changed" from="Content/Body/SliderQuantity" to="." method="_on_slider_quantity_value_changed"]
[connection signal="pressed" from="Content/Body/Buttons/ButtonDrop" to="." method="_on_button_drop_pressed"]
